--- a/jade/index.jade
+++ b/jade/index.jade
@@ -227,17 +227,20 @@ block content
                 ul(id="feast").clearfix
                     li
                         .left-slider-text
-                            p  Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)
-                            p Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab
+                            .box-sh
+                                p  Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)
+                                p Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab
                             .border-bottom
                         .right-slider-img
                             img(src="img/feast.jpg")
 
                     li
                         .left-slider-text
-                            p  Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)
-                            p Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab
+                            .box-sh
+                                p  Наша конференция заканчивается всегда банкетом, она<br> проходит (бла, бла, бла.)
+                                p Enter a quote from the document or a brief description of an interesting event. The caption can be placed anywhere in the document. To change the formatting of an inscription containing catchy citations, use the Drawing Tools tab
                             .border-bottom
                         .right-slider-img
                             img(src="img/feast.jpg")
+
 
