--- a/jade/gde-cogda.jade
+++ b/jade/gde-cogda.jade
@@ -100,5 +100,13 @@ block content
                                     p  Большой зал, на котором будут проходить выступления спикеров
                         .right-slider-img
                             img(src="img/conf3.jpg")
+    .where
+        .inner
+            .container-fluid
+                .row
+                    .col-xs-12
+                        .title-go.title-go-all
+                            h2 Когда
+                            p Пока мы точно знаем, что конференция будет в сентябре. А именно Вы<br> поможете решить, в какие даты она пройдет
 
 
