--- a/jade/gde-cogda.jade
+++ b/jade/gde-cogda.jade
@@ -18,12 +18,6 @@ block content
     .feast.feast-in
         .inner
             .slider-conf
-                .arrow-slider.clearfix
-                    .border-bottom
-                    .right-arrow.right-arrow-one
-                        a(href="#")
-                    .left-arrow.left-arrow-one
-                        a(href="#")
                 ul(id="where-one").clearfix
                     li
                         .orange-bg
@@ -42,23 +36,24 @@ block content
                                     p  Большой зал, на котором будут проходить выступления спикеров
                         .right-slider-img
                             img(src="img/feast.jpg")
-            .slider-conf.slider-conf-right
                 .arrow-slider.clearfix
                     .border-bottom
-                    .left-arrow.left-arrow-one
-                        a(href="#")
                     .right-arrow.right-arrow-one
                         a(href="#")
+                    .left-arrow.left-arrow-one
+                        a(href="#")
+            .slider-conf.slider-conf-right
                 ul(id="where-two").clearfix
                     li
-                        .right-slider-img
-                            img(src="img/conf2.jpg")
-
                         .orange-bg
                             .left-slider-text
                                 .box-sh
                                     h2  На втором этаже
                                     p  Малый зал, где будут проходить мастер-классы и практические семинары
+
+                        .right-slider-img
+                            img(src="img/conf2.jpg")
+
 
                     li
                         .right-slider-img
@@ -70,13 +65,14 @@ block content
                                     h2  На втором этаже
                                     p  Малый зал, где будут проходить мастер-классы и практические семинары
 
-            .slider-conf.slider-conf-tree
                 .arrow-slider.clearfix
                     .border-bottom
-                    .right-arrow.right-arrow-one
-                        a(href="#")
-                    .left-arrow.left-arrow-one
-                        a(href="#")
+                    .poz-right
+                        .left-arrow.left-arrow-one
+                            a(href="#")
+                        .right-arrow.right-arrow-one
+                            a(href="#")
+            .slider-conf.slider-conf-tree
                 ul(id="where-tree").clearfix
                     li
                         .orange-bg
@@ -98,6 +94,12 @@ block content
                         .right-slider-img
                             img(src="img/conf3.jpg")
 
+                .arrow-slider.clearfix
+                    .border-bottom
+                    .right-arrow.right-arrow-one
+                        a(href="#")
+                    .left-arrow.left-arrow-one
+                        a(href="#")
     .where
         .inner
             .container-fluid
