--- a/jade/gde-cogda.jade
+++ b/jade/gde-cogda.jade
@@ -36,12 +36,7 @@ block content
                                     p  Большой зал, на котором будут проходить выступления спикеров
                         .right-slider-img
                             img(src="img/feast.jpg")
-                .arrow-slider.clearfix
-                    .border-bottom
-                    .right-arrow.right-arrow-one
-                        a(href="#")
-                    .left-arrow.left-arrow-one
-                        a(href="#")
+
             .slider-conf.slider-conf-right
                 ul(id="where-two").clearfix
                     li
@@ -108,5 +103,84 @@ block content
                         .title-go.title-go-all
                             h2 Когда
                             p Пока мы точно знаем, что конференция будет в сентябре. А именно Вы<br> поможете решить, в какие даты она пройдет
+
+                        .calendar
+                            .choice-day
+                                h2  Выберите дни:
+                                label
+                                    .first-l
+                                        input.radio(type='radio' name='radio-test')
+                                        span.radio-custom
+                                        span.label Пятница-Суббота
+                                    input.radio(type='radio' name='radio-test')
+                                    span.radio-custom
+                                    span.label Пятница-Суббота
+                            .week
+                                h2  Выбирете неделю сентября:
+                                .choice-week
+                                    label
+                                        input.radio(type='radio' name='radio-test')
+                                        span.radio-custom
+                                        input.radio(type='radio' name='radio-test')
+                                        span.radio-custom
+                                        input.radio(type='radio' name='radio-test')
+                                        span.radio-custom
+                                        input.radio(type='radio' name='radio-test')
+                                        span.radio-custom
+                                        input.radio(type='radio' name='radio-test')
+                                        span.radio-custom
+                                .table
+                                    table(border=1)
+                                        tr
+                                          td Пн
+                                          td Вт
+                                          td Ср
+                                          td Чт
+                                          td Пт
+                                          td Сб
+                                          td Вс
+                                        tr
+                                          td 28
+                                          td 29
+                                          td 30
+                                          td 31
+                                          td 1
+                                          td 2
+                                          td 3
+                                        tr
+                                          td 4
+                                          td 5
+                                          td 6
+                                          td 7
+                                          td 8
+                                          td 9
+                                          td 10
+                                        tr
+                                          td 11
+                                          td 12
+                                          td 13
+                                          td 14
+                                          td 15
+                                          td 16
+                                          td 17
+                                        tr
+                                          td 18
+                                          td 19
+                                          td 20
+                                          td 21
+                                          td 22
+                                          td 23
+                                          td 24
+                                        tr
+                                          td 25
+                                          td 26
+                                          td 27
+                                          td 28
+                                          td 29
+                                          td 30
+                                          td 1
+                                .geen-buttons
+                                    a(href="#") Отправить
+
 
 
