--- a/scss/main.scss
+++ b/scss/main.scss
@@ -127,7 +127,7 @@ $hamburger-layer-color: #fff;
     @media (max-width: 656px){
       h2{
         &:after{
-          left: 0px;
+          left: -10px;
         }
       }
     }
@@ -2074,6 +2074,133 @@ $hamburger-layer-color: #fff;
           left: 0;
 
         }
+      }
+    }
+  }
+}
+
+
+.calendar{
+  padding: 30px 80px;
+  max-width: 580px;
+  margin: 0 auto;
+  border:  1px solid #dddddd;
+  border-radius: 10px;
+  h2{
+    font-size: 24px;
+    color: #263139;
+    line-height: 24px;
+    font-weight: 300;
+  }
+  label{
+    .first-l{
+      margin-right: 93px;
+      display: inline-block;
+      vertical-align: middle;
+    }
+    .radio {
+      display: none;
+    }
+    .checkbox-custom,
+    .radio-custom {
+      width: 16px;
+      height: 16px;
+      border-radius: 3px;
+      position: relative;
+      background-color: #e9e9e9;
+    }
+    .checkbox-custom,
+    .radio-custom,
+    .label {
+      display: inline-block;
+      vertical-align: middle;
+      color: #7f8890;
+      margin-top: 20px;
+      position: relative;
+    }
+    .label{
+      padding-left: 24px;
+      &:first-child{
+        margin-right: 10px;
+      }
+    }
+    .checkbox:checked + .checkbox-custom::before,
+    .radio:checked + .radio-custom::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 2px;
+      right: 2px;
+      bottom: 2px;
+      left: 2px;
+      background-image: url("../img/radio.png");
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+    .radio-custom,
+    .radio:checked + .radio-custom::before {
+      border-radius: 50%;
+    }
+  }
+}
+
+.week{
+  margin-top: 76px;
+  .geen-buttons{
+    margin-top: 44px;
+    text-align: center;
+  }
+}
+
+
+.choice-week{
+  display: inline-block;
+  vertical-align: top;
+  padding-top: 67px;
+  label{
+    .checkbox-custom,
+    .radio-custom,
+    .label {
+      display: block;
+
+    }
+    .radio-custom {
+      margin-bottom: 27px;
+      margin-top: 0;
+    }
+  }
+}
+.table{
+  margin-top: 22px;
+  padding-left: 5px;
+  display: inline-block;
+  vertical-align: top;
+  tr{
+    &:first-child{
+      td{
+        background-color: #f7f8f8;
+        border-top: none;
+        color: #ff8a00;
+        padding: 8px 10px 9px 0;
+      }
+    }
+    &:last-child{
+      td{
+        border-bottom: 1px solid #dddddd;
+      }
+    }
+    td{
+      width: 56px;
+      text-align: right;
+      padding: 20px 10px 10px 0;
+      font-size: 12px;
+      line-height: 12px;
+      font-weight:bold;
+      border-left: 1px solid #dddddd;
+      border-top: 1px solid #dddddd;
+      color: #31363f;
+      &:last-child{
+        border-right: 1px solid #dddddd;
       }
     }
   }
