--- a/scss/main.scss
+++ b/scss/main.scss
@@ -118,7 +118,7 @@ $hamburger-layer-color: #fff;
     @media (max-width: 802px){
       h2{
         &:after{
-          left: 55px;
+          left: -10px;
         }
       }
     }
@@ -1732,6 +1732,18 @@ $hamburger-layer-color: #fff;
       padding-top: 29px;
     }
   }
+  @if $adaptive == true {
+    @media (max-width: 800px){
+      .title-go{
+        p{
+          br{
+            display: block;
+          }
+        }
+      }
+    }
+
+  }
 }
 
 .where-map{
@@ -2083,7 +2095,7 @@ $hamburger-layer-color: #fff;
 .calendar{
   padding: 30px 80px;
   max-width: 580px;
-  margin: 0 auto;
+  margin: 50px auto;
   border:  1px solid #dddddd;
   border-radius: 10px;
   h2{
