--- a/jade/gde-cogda.jade
+++ b/jade/gde-cogda.jade
@@ -112,6 +112,7 @@ block content
                                         input.radio(type='radio' name='radio-test')
                                         span.radio-custom
                                         span.label Пятница-Суббота
+                                label
                                     input.radio(type='radio' name='radio-test')
                                     span.radio-custom
                                     span.label Пятница-Суббота
@@ -121,12 +122,16 @@ block content
                                     label
                                         input.radio(type='radio' name='radio-test')
                                         span.radio-custom
+                                    label
                                         input.radio(type='radio' name='radio-test')
                                         span.radio-custom
+                                    label
                                         input.radio(type='radio' name='radio-test')
                                         span.radio-custom
+                                    label
                                         input.radio(type='radio' name='radio-test')
                                         span.radio-custom
+                                    label
                                         input.radio(type='radio' name='radio-test')
                                         span.radio-custom
                                 .table
