--- a/jade/gde-cogda.jade
+++ b/jade/gde-cogda.jade
@@ -37,6 +37,12 @@ block content
                         .right-slider-img
                             img(src="img/feast.jpg")
 
+                .arrow-slider.clearfix
+                    .border-bottom
+                    .right-arrow.right-arrow-one
+                        a(href="#")
+                    .left-arrow.left-arrow-one
+                        a(href="#")
             .slider-conf.slider-conf-right
                 ul(id="where-two").clearfix
                     li
@@ -63,9 +69,9 @@ block content
                 .arrow-slider.clearfix
                     .border-bottom
                     .poz-right
-                        .left-arrow.left-arrow-one
+                        .left-arrow.left-arrow-one.left-arrow-two
                             a(href="#")
-                        .right-arrow.right-arrow-one
+                        .right-arrow.right-arrow-one.right-arrow-two
                             a(href="#")
             .slider-conf.slider-conf-tree
                 ul(id="where-tree").clearfix
@@ -91,9 +97,9 @@ block content
 
                 .arrow-slider.clearfix
                     .border-bottom
-                    .right-arrow.right-arrow-one
+                    .right-arrow.right-arrow-one.left-arrow-tree
                         a(href="#")
-                    .left-arrow.left-arrow-one
+                    .left-arrow.left-arrow-one.right-arrow-tree
                         a(href="#")
     .where
         .inner
