--- a/jade/index.jade
+++ b/jade/index.jade
@@ -139,9 +139,9 @@ block content
                     p Ежегодная конференция по Asterisk - важное и ожидаемое мероприятие для всех, кто связан с Asterisk в нашей стране. На одной площадке мы собираем около 100 профессионалов и около 200 активных пользователей системы. На конференции вы не только узнаете много нового и полезного о мире Asterisk, но и сможете обрести новые знакомства и связи с единомышленниками.
             .slider-conf
                 .arrow-slider.clearfix
-                    .left-arrow
+                    .left-arrow.left-arrow-r
                         a(href="#")
-                    .right-arrow
+                    .right-arrow.right-arrow-r
                         a(href="#")
                 ul(id="adaptive").clearfix
                     li
@@ -220,9 +220,9 @@ block content
                 h2 Завершительный<br> банкет
             .slider-conf
                 .arrow-slider.clearfix
-                    .left-arrow
+                    .left-arrow.left-arrow-i
                         a(href="#")
-                    .right-arrow
+                    .right-arrow.right-arrow-i
                         a(href="#")
                 ul(id="feast").clearfix
                     li
