--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1641,6 +1641,39 @@
     .table tr td:last-child {
       border-right: 1px solid #dddddd; }
 
+.navigate .left-map-nav {
+  width: 50%;
+  float: left;
+  text-align: left; }
+  .navigate .left-map-nav img {
+    width: 100%; }
+
+.navigate .right-text-nav {
+  width: 50%;
+  float: left;
+  padding-left: 30px; }
+  .navigate .right-text-nav .title-go {
+    text-align: left; }
+  .navigate .right-text-nav ul {
+    padding-top: 5px; }
+  .navigate .right-text-nav li {
+    margin-top: 10px;
+    padding-left: 38px; }
+    .navigate .right-text-nav li p {
+      position: relative;
+      font-size: 16px;
+      line-height: 24px;
+      color: #7f8890;
+      font-weight: 300; }
+      .navigate .right-text-nav li p:after {
+        position: absolute;
+        left: -34px;
+        top: 5px;
+        content: '';
+        background-image: url("../img/green-check.png");
+        width: 15px;
+        height: 15px; }
+
 .allert, .allert_tell {
   position: absolute;
   z-index: 20;
