--- a/jade/gde-cogda.jade
+++ b/jade/gde-cogda.jade
@@ -110,7 +110,7 @@ block content
                             h2 Когда
                             p Пока мы точно знаем, что конференция будет в сентябре. А именно Вы<br> поможете решить, в какие даты она пройдет
 
-                        .calendar
+                        .calendar-in
                             .choice-day
                                 h2  Выберите дни:
                                 label
