--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1522,46 +1522,46 @@
     .feast-in .orange-bg .left-slider-text {
       left: 0; } }
 
-.calendar {
+.calendar-in {
   padding: 30px 80px;
   max-width: 580px;
   margin: 50px auto;
   border: 1px solid #dddddd;
   -webkit-border-radius: 10px;
   border-radius: 10px; }
-  .calendar h2 {
+  .calendar-in h2 {
     font-size: 24px;
     color: #263139;
     line-height: 24px;
     font-weight: 300; }
-  .calendar label .first-l {
+  .calendar-in label .first-l {
     margin-right: 93px;
     display: inline-block;
     vertical-align: middle; }
-  .calendar label .radio {
+  .calendar-in label .radio {
     display: none; }
-  .calendar label .checkbox-custom,
-  .calendar label .radio-custom {
+  .calendar-in label .checkbox-custom,
+  .calendar-in label .radio-custom {
     width: 16px;
     height: 16px;
     -webkit-border-radius: 3px;
     border-radius: 3px;
     position: relative;
     background-color: #e9e9e9; }
-  .calendar label .checkbox-custom,
-  .calendar label .radio-custom,
-  .calendar label .label {
+  .calendar-in label .checkbox-custom,
+  .calendar-in label .radio-custom,
+  .calendar-in label .label {
     display: inline-block;
     vertical-align: middle;
     color: #7f8890;
     margin-top: 20px;
     position: relative; }
-  .calendar label .label {
+  .calendar-in label .label {
     padding-left: 24px; }
-    .calendar label .label:first-child {
+    .calendar-in label .label:first-child {
       margin-right: 10px; }
-  .calendar label .checkbox:checked + .checkbox-custom::before,
-  .calendar label .radio:checked + .radio-custom::before {
+  .calendar-in label .checkbox:checked + .checkbox-custom::before,
+  .calendar-in label .radio:checked + .radio-custom::before {
     content: "";
     display: block;
     position: absolute;
@@ -1572,30 +1572,30 @@
     background-image: url("../img/radio.png");
     background-position: center;
     background-repeat: no-repeat; }
-  .calendar label .radio-custom,
-  .calendar label .radio:checked + .radio-custom::before {
+  .calendar-in label .radio-custom,
+  .calendar-in label .radio:checked + .radio-custom::before {
     -webkit-border-radius: 50%;
     border-radius: 50%; }
   @media (max-width: 799px) {
-    .calendar {
+    .calendar-in {
       padding: 30px 15px;
       text-align: center; } }
   @media (max-width: 600px) {
-    .calendar {
+    .calendar-in {
       padding: 30px 15px;
       max-width: inherit; } }
   @media (max-width: 479px) {
-    .calendar .table tr td {
+    .calendar-in .table tr td {
       width: 40px; } }
   @media (max-width: 475px) {
-    .calendar label {
+    .calendar-in label {
       display: block; }
-      .calendar label .first-l {
+      .calendar-in label .first-l {
         margin-right: 0; }
-    .calendar .table tr td {
+    .calendar-in .table tr td {
       width: 40px; } }
   @media (max-width: 367px) {
-    .calendar .table tr td {
+    .calendar-in .table tr td {
       width: 30px; } }
 
 .week {
@@ -1673,6 +1673,18 @@
         background-image: url("../img/green-check.png");
         width: 15px;
         height: 15px; }
+
+@media (max-width: 1024px) {
+  .navigate .left-map-nav img {
+    position: relative;
+    left: -134px;
+    width: initial; } }
+
+@media (max-width: 890px) {
+  .navigate .left-map-nav img {
+    position: relative;
+    left: -258px;
+    width: initial; } }
 
 .allert, .allert_tell {
   position: absolute;
