--- a/scss/header.scss
+++ b/scss/header.scss
@@ -93,6 +93,7 @@ header{
   .active{
     border-bottom: 2px solid #ff8a00;
     background-color: #282c33;
+    transition: 1s all;
   }
     a{
       display: block;
@@ -162,12 +163,13 @@ header{
       display: none;
       position: absolute;
       padding-left: 0;
-      left: 0;
+      left: -100%;
       top:0;
       z-index: 69;
       background-color: #fff;
       max-width: 650px;
       width: 100%;
+      transition: 1s all;
       .active{
         color: #fff;
       }
@@ -176,6 +178,7 @@ header{
         background-color: #fff;
         a{
           color: #000;
+          padding-left: 20px;
           &:hover{
             color: #fff;
           }
@@ -187,6 +190,8 @@ header{
 }
 .head-menu.is-active{
   display: block;
+  left: 0;
+  transition: 1s all;
 
 }
 body .hamburger-box{
